--- a/app/src/main/res/drawable/bg_top_right.xml
+++ b/app/src/main/res/drawable/bg_top_right.xml
@@ -2,11 +2,10 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <gradient
-        android:type="radial"
-        android:angle="0"
-        android:startColor="@color/color_button_start"
-        android:centerColor="@color/color_button_middle"
-        android:endColor="@color/color_button_last" />
+        android:startColor="@color/blue_primary"
+        android:centerColor="@color/blue_secondary"
+        android:endColor="@color/blue_final"
+        android:angle="270"/>
     <corners android:bottomRightRadius="120dp"/>
 
 </shape>
