--- a/app/src/main/res/layout/fragment_recover.xml
+++ b/app/src/main/res/layout/fragment_recover.xml
@@ -18,6 +18,7 @@
             android:id="@+id/appBarLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@color/white"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
@@ -58,6 +59,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="32dp"
+            android:fontFamily="@font/inter_semibold"
+            android:textColor="@color/black"
             android:text="Digite seu e-mail que te enviaremos um link para redefinir sua senha"
             android:textAlignment="center"
             android:textSize="18sp"
@@ -115,6 +118,8 @@
                 android:layout_marginEnd="8dp"
                 android:layout_weight="1"
                 android:gravity="end"
+                android:fontFamily="@font/inter"
+                android:textColor="@color/black"
                 android:text="Não tem uma conta? " />
 
             <TextView
