--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -12,50 +12,48 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/color_default"
-        >
+        android:background="@color/color_default">
 
         <com.google.android.material.appbar.AppBarLayout
             android:id="@+id/appBarLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-
+            android:background="@color/color_default"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
             <androidx.appcompat.widget.Toolbar
-            android:background="@drawable/bg_app_bar"
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@drawable/bg_app_bar"
                 android:textAlignment="center">
 
-               <LinearLayout
-                   android:layout_width="match_parent"
-                   android:layout_height="wrap_content"
-                   android:gravity="center"
-                   android:layout_marginEnd="32dp"
-                   android:orientation="vertical"
-                   >
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="32dp"
+                    android:gravity="center"
+                    android:orientation="vertical">
 
-                   <TextView
-                       android:layout_width="wrap_content"
-                       android:layout_height="wrap_content"
-                       android:text="Criar Conta"
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Criar Conta"
 
-                       android:textColor="@color/color_default"
-                       android:textStyle="bold"
-                       android:textSize="32sp"/>
+                        android:textColor="@color/color_default"
+                        android:textSize="32sp"
+                        android:textStyle="bold" />
 
 
-                   <ImageView
-                       android:id="@+id/imageView"
-                       android:layout_width="match_parent"
-                       android:layout_height="100dp"
-                       android:src="@drawable/create_account_image" />
-               </LinearLayout>
+                    <ImageView
+                        android:id="@+id/imageView"
+                        android:layout_width="match_parent"
+                        android:layout_height="100dp"
+                        android:src="@drawable/create_account_image" />
+                </LinearLayout>
             </androidx.appcompat.widget.Toolbar>
         </com.google.android.material.appbar.AppBarLayout>
 
@@ -142,12 +140,12 @@
                 android:layout_marginBottom="10dp"
                 android:drawableStart="@drawable/ic_phone"
                 android:hint="(99)99999-9999"
-                app:mask="(##) #-####-####"
                 android:inputType="phone"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
+                app:layout_constraintTop_toBottomOf="@+id/linearLayout"
+                app:mask="(##) #-####-####" />
             " />
 
             <TextView
@@ -185,8 +183,7 @@
                 android:layout_marginBottom="10dp"
                 android:drawableStart="@drawable/ic_lock_password_line"
                 android:hint="digite sua senha"
-                android:inputType="textPassword"
-                />
+                android:inputType="textPassword" />
 
             <!--            <TextView-->
             <!--                android:layout_width="wrap_content"-->
