--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,7 +1,88 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.BankFinance" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your dark theme here. -->
-        <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
+    <style name="Base.Theme.BankFinance" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <!-- Customize your light theme here. -->
+        <item name="colorPrimary">@color/color_default</item>
+        <item name="android:windowBackground">@color/color_default</item>
+    </style>
+
+    <style name="Theme.BankFinance" parent="Base.Theme.BankFinance" />
+
+    <style name="Theme.BankFinance.TelaComAppBarDiferente" parent="Theme.BankFinance">
+        <!-- Defina a cor da barra de status para corresponder à sua AppBar -->
+        <item name="android:statusBarColor">@color/white</item>
+        <item name="colorPrimary">@color/white</item>
+
+    </style>
+
+    <style name="Theme.BankFinance.TelaComAppBarDeposit" parent="Theme.BankFinance">
+        <!-- Defina a cor da barra de status para corresponder à sua AppBar -->
+        <item name="android:statusBarColor">@color/white</item>
+        <item name="colorPrimary">@color/color_default</item>
+        <item name="drawableTint">@color/white</item>
+
+    </style>
+
+    <style name="ButtonStyleSignIn" parent="Theme.Material3.Light.NoActionBar">
+        <item name="android:background">@drawable/bg_button</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">18sp</item>
+        <!--        <item name="android:fontFamily">@font/inter_semibold</item>-->
+        <item name="android:layout_width">358dp</item>
+        <item name="android:layout_height">64dp</item>
+        <!--        <item name="android:layout_marginHorizontal">20dp</item>-->
+        <!--        <item name="android:layout_marginVertical">10dp</item>-->
+    </style>
+
+    <style name="HintTextStyle" parent="Theme.Material3.Light.NoActionBar">
+        <item name="android:textSize">16sp</item>
+
+    </style>
+
+
+    <style name="TextInputLayoutStyle" parent="Theme.Material3.Light.NoActionBar">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">60dp</item>
+
+        <item name="android:layout_marginTop">10dp</item>
+        <item name="hintTextColor">@color/black</item>
+
+        <item name="boxStrokeErrorColor">@color/boxStrokeColor_error</item>
+        <item name="hintTextAppearance">@style/HintTextStyle</item>
+        <item name="android:textColorHint">@color/black</item>
+    </style>
+
+    <style name="EditTextStyle" parent="Theme.Material3.Light.NoActionBar">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:background">@drawable/bg_edit</item>
+        <item name="android:textColor">@color/color_default</item>
+        <!--        <item name="android:fontFamily">@font/inter</item>-->
+        <item name="android:drawablePadding">6dp</item>
+        <item name="android:drawableTint">@color/color_default</item>
+    </style>
+
+
+
+    <style name="Theme.EditText" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <!-- Customize your light theme here. -->
+        <item name="android:background">@drawable/bg_edit</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:textColorHint">@color/color_hint_default</item>
+        <item name="android:textColor">@color/color_default</item>
+        <item name="android:padding">14dp</item>
+        <item name="android:drawablePadding">10dp</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:drawableTint">@color/color_default</item>
+        <item name="android:windowBackground">@color/color_default</item>
+    </style>
+
+    <style name="BottomSheetDialog" parent="Theme.Design.BottomSheetDialog">
+        <item name="bottomSheetStyle">@style/bottomSheetStyleWrapper</item>
+    </style>
+
+    <style name="bottomSheetStyleWrapper" parent="Widget.Design.BottomSheet.Modal">
+        <item name="android:background">@android:color/transparent</item>
     </style>
 </resources>
