--- a/app/src/main/res/color/color_nav_item.xml
+++ b/app/src/main/res/color/color_nav_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <!-- Cor para o item selecionado -->
-    <item android:color="@color/color_default" android:state_checked="true"/>
+    <item android:color="@color/blue_final" android:state_checked="true"/>
     <!-- Cor para itens não selecionados -->
-    <item android:color="@color/black" />
+    <item android:color="@color/color_default" />
 </selector>
