feature:buscando transacao no banco de dados e mostrando no card da home

--- a/app/src/main/res/layout/card_balance.xml
+++ b/app/src/main/res/layout/card_balance.xml
@@ -45,7 +45,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/inter_bold"
-            android:text="1,558.00"
+            tools:text="1,558.00"
             android:textColor="@android:color/white"
             android:textSize="30sp"
             app:layout_constraintStart_toStartOf="parent"
