--- a/app/src/main/res/layout/card_balance.xml
+++ b/app/src/main/res/layout/card_balance.xml
@@ -3,16 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="160dp"
-    app:cardCornerRadius="8dp"
+    android:layout_height="200dp"
     android:layout_marginHorizontal="20dp"
+    app:cardCornerRadius="8dp"
     app:cardElevation="16dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-    android:background="@drawable/bg_card_home"
-        android:padding="16dp">
+        android:background="@drawable/bg_card_home"
+        android:padding="10dp">
 
         <!-- Total Balance Label -->
         <TextView
@@ -45,22 +45,20 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/inter_bold"
-            tools:text="1,558.00"
             android:textColor="@android:color/white"
             android:textSize="30sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tv_total_balance_label" />
+            app:layout_constraintTop_toBottomOf="@id/tv_total_balance_label"
+            tools:text="1,558.00" />
 
         <!-- Received Section -->
         <LinearLayout
             android:id="@+id/linear_received"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:layout_marginBottom="10dp"
             android:orientation="horizontal"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent">
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/txt_total_balance_value">
 
             <ImageView
                 android:layout_width="46dp"
@@ -88,14 +86,13 @@
                     android:orientation="horizontal">
 
 
-
                     <TextView
                         android:id="@+id/txt_received_value"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:fontFamily="@font/inter_semibold"
                         android:textColor="@android:color/white"
                         android:textSize="20sp"
-                        android:fontFamily="@font/inter_semibold"
                         tools:text="1,840.00" />
                 </LinearLayout>
             </LinearLayout>
@@ -107,15 +104,15 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            app:layout_constraintBottom_toBottomOf="@+id/linear_received"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/linear_received">
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/linear_received">
 
             <ImageView
                 android:layout_width="46dp"
                 android:layout_height="46dp"
-                android:src="@drawable/ic_arrow_up_circle_fill"
                 android:backgroundTint="@color/blue_final"
+                android:src="@drawable/ic_arrow_up_circle_fill"
                 tools:layout_editor_absoluteX="187dp"
                 tools:layout_editor_absoluteY="97dp" />
 
@@ -127,7 +124,7 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="Enviados"
+                    android:text="Enviado"
                     android:textColor="@color/txt_color_card"
                     android:textSize="16sp" />
 
@@ -137,12 +134,11 @@
                     android:orientation="horizontal">
 
 
-
                     <TextView
                         android:id="@+id/txt_sent_value"
                         android:layout_width="wrap_content"
-                        android:fontFamily="@font/inter_semibold"
                         android:layout_height="wrap_content"
+                        android:fontFamily="@font/inter_semibold"
                         android:textColor="@android:color/white"
                         android:textSize="20sp"
                         tools:text="284.00" />
