--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -150,8 +150,9 @@
                         android:id="@+id/recycler_view_transactions"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        tools:listitem="@layout/last_transaction_item"
-                        tools:itemCount="6" />
+                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                        tools:itemCount="5"
+                        tools:listitem="@layout/transaction_item" />
 
                     <TextView
                         android:id="@+id/tv_empty_transactions"
@@ -163,6 +164,16 @@
                         android:gravity="center"
                         android:visibility="gone"
                         android:textAlignment="center" />
+
+                    <ProgressBar
+                        android:id="@+id/progress_bar"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:indeterminateTint="@color/white"
+                        tools:visibility="visible"
+                        android:visibility="invisible"
+                        />
                 </FrameLayout>
             </com.google.android.material.card.MaterialCardView>
 
