--- a/app/src/main/res/drawable/bg_deposit_top.xml
+++ b/app/src/main/res/drawable/bg_deposit_top.xml
@@ -2,10 +2,10 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
     <gradient
-        android:angle="270"
+        android:startColor="@color/blue_primary"
         android:centerColor="@color/blue_secondary"
-        android:endColor="@color/blue_primary"
-        android:startColor="@color/blue_final" />
+        android:endColor="@color/blue_final"
+        android:angle="270"/>
 
 
 </shape>
