--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -80,6 +80,11 @@
         <action
             android:id="@+id/action_deposityFragment_to_homeFragment"
             app:destination="@id/homeFragment" />
+        <action
+            android:id="@+id/action_depositFragment_to_depositReceiptFragment"
+            app:destination="@id/depositReceiptFragment"
+            app:popUpToInclusive="true"
+            app:popUpTo="@id/depositFragment"/>
     </fragment>
     <fragment
         android:id="@+id/profileFragment"
@@ -90,10 +95,23 @@
         android:id="@+id/transferFragment"
         android:name="dev.airon.bankfinance.presenter.transfer.TransferFragment"
         android:label="fragment_transfer"
-        tools:layout="@layout/fragment_transfer" />
+        tools:layout="@layout/fragment_transfer" >
+        <argument
+            android:name="deposit"
+            app:argType="dev.airon.bankfinance.data.model.Deposit" />
+    </fragment>
     <fragment
         android:id="@+id/walletFragment"
         android:name="dev.airon.bankfinance.presenter.wallet.WalletFragment"
         android:label="fragment_wallet"
         tools:layout="@layout/fragment_wallet" />
+    <fragment
+        android:id="@+id/depositReceiptFragment"
+        android:name="dev.airon.bankfinance.presenter.features.deposit.DepositReceiptFragment"
+        android:label="fragment_deposit_receipt"
+        tools:layout="@layout/fragment_deposit_receipt" >
+        <argument
+            android:name="idDeposit"
+            app:argType="string" />
+    </fragment>
 </navigation>
