--- a/app/src/main/res/drawable/ic_logout.xml
+++ b/app/src/main/res/drawable/ic_logout.xml
@@ -1,5 +1,9 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android" android:autoMirrored="true" android:height="24dp" android:tint="#FFFFFF" android:viewportHeight="24" android:viewportWidth="24" android:width="24dp">
-      
-    <path android:fillColor="@android:color/white" android:pathData="M17,7l-1.41,1.41L18.17,11H8v2h10.17l-2.58,2.58L17,17l5,-5zM4,5h8V3H4c-1.1,0 -2,0.9 -2,2v14c0,1.1 0.9,2 2,2h8v-2H4V5z"/>
-    
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
+  <path
+      android:pathData="M10,23C10,23.265 9.895,23.52 9.707,23.707C9.52,23.895 9.265,24 9,24H2C1.47,24 0.961,23.789 0.586,23.414C0.211,23.039 0,22.53 0,22V2C0,1.47 0.211,0.961 0.586,0.586C0.961,0.211 1.47,0 2,0H9C9.265,0 9.52,0.105 9.707,0.293C9.895,0.48 10,0.735 10,1C10,1.265 9.895,1.52 9.707,1.707C9.52,1.895 9.265,2 9,2H2V22H9C9.265,22 9.52,22.105 9.707,22.293C9.895,22.48 10,22.735 10,23ZM23.708,11.292L18.708,6.293C18.568,6.152 18.389,6.057 18.195,6.018C18.001,5.98 17.8,6 17.617,6.075C17.434,6.151 17.278,6.279 17.168,6.444C17.058,6.609 17,6.802 17,7V11H9C8.735,11 8.48,11.105 8.293,11.293C8.105,11.48 8,11.735 8,12C8,12.265 8.105,12.52 8.293,12.707C8.48,12.895 8.735,13 9,13H17V17C17,17.198 17.058,17.391 17.168,17.556C17.278,17.721 17.434,17.849 17.617,17.925C17.8,18 18.001,18.02 18.195,17.982C18.389,17.943 18.568,17.847 18.708,17.708L23.708,12.708C23.801,12.615 23.874,12.504 23.925,12.383C23.975,12.262 24.001,12.131 24.001,12C24.001,11.869 23.975,11.738 23.925,11.617C23.874,11.496 23.801,11.385 23.708,11.292Z"
+      android:fillColor="#FFFFFF"/>
 </vector>
